--- a/index.html
+++ b/index.html
@@ -71,11 +71,12 @@
                 <div class="slides">
                     <img src="./img/lp.jpg" alt="Dessert 1" class="slide">
                     <img src="./img/slide2.jpg" alt="Dessert 2" class="slide">
-                    <img src="./img/deeliver-mUnrb7-xCtk-unsplash.jpg" alt="Dessert 3" class="slide">
-                    <img src="./img/elena-leya-iMIFA_y3PpM-unsplash.jpg" alt="Dessert 4" class="slide">
-                    <img src="./img/joanna-kosinska-b26cpkvkcZA-unsplash.jpg" alt="Dessert 5" class="slide">
+                    <img src="./img/natalia-gusakova-isjsR5XB3pA-unsplash.jpg" alt="Dessert 3" class="slide">
+                    <img src="./img/nathan-dumlao-pJllO6r0pKo-unsplash.jpg" alt="Dessert 4" class="slide">
+                    <img src="./img/natasha-levai-YVsFV0E-CGo-unsplash.jpg" alt="Dessert 5" class="slide">
                     <img src="./img/slide2.jpg" alt="Dessert 6" class="slide">
                 </div>
+                <!-- &#10094左箭頭, &#10095右箭頭 -->
                 <button class="slider-btn prev">&#10094;</button>
                 <button class="slider-btn next">&#10095;</button>
                 <div class="dots">
