--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <section class="split-section">
         <div class="left-side">
-            <p class="overlay-text">Lorem ipsum dolor sit amet, consectetur.</p>
+            <p class="overlay-text">Treat Yourself to Sweet Perfection.</p>
             <div class="search-bar">
                 <input type="text" placeholder="Search Dessert Shops">
                 <input type="text" placeholder="Songshan, Taipei">
@@ -76,7 +76,7 @@
                     <img src="./img/natasha-levai-YVsFV0E-CGo-unsplash.jpg" alt="Dessert 5" class="slide">
                     <img src="./img/slide2.jpg" alt="Dessert 6" class="slide">
                 </div>
-                <!-- &#10094左箭頭, &#10095右箭頭 -->
+                <!-- &#10094左箭頭, &#10095 -->
                 <button class="slider-btn prev">&#10094;</button>
                 <button class="slider-btn next">&#10095;</button>
                 <div class="dots">
@@ -147,7 +147,7 @@
                     <div class="rating">
                         <span>&#9733;&#9733;&#9733;&#9733;&#9734;</span>
                     </div>
-                    <img src="./img/deeliver-mUnrb7-xCtk-unsplash.jpg" alt="Review Image" class="review-image">
+                    <img src="./img/lp.jpg" alt="Review Image" class="review-image">
                     <p class="review-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, vel!</p>
                     <a href="shop_detail.html" class="read-more">Read more</a>
                 </div>
@@ -167,7 +167,7 @@
                     <div class="rating">
                         <span>&#9733;&#9733;&#9733;&#9733;&#9734;</span>
                     </div>
-                    <img src="./img/deeliver-mUnrb7-xCtk-unsplash.jpg" alt="Review Image" class="review-image">
+                    <img src="./img/lp.jpg" alt="Review Image" class="review-image">
                     <p class="review-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, vel!</p>
                     <a href="shop_detail.html" class="read-more">Read more</a>
                 </div>
@@ -187,7 +187,7 @@
                     <div class="rating">
                         <span>&#9733;&#9733;&#9733;&#9733;&#9734;</span>
                     </div>
-                    <img src="./img/deeliver-mUnrb7-xCtk-unsplash.jpg" alt="Review Image" class="review-image">
+                    <img src="./img/lp.jpg" alt="Review Image" class="review-image">
                     <p class="review-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, vel!</p>
                     <a href="shop_detail.html" class="read-more">Read more</a>
                 </div>
@@ -207,7 +207,7 @@
                     <div class="rating">
                         <span>&#9733;&#9733;&#9733;&#9733;&#9734;</span>
                     </div>
-                    <img src="./img/deeliver-mUnrb7-xCtk-unsplash.jpg" alt="Review Image" class="review-image">
+                    <img src="./img/lp.jpg" alt="Review Image" class="review-image">
                     <p class="review-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, vel!</p>
                     <a href="shop_detail.html" class="read-more">Read more</a>
                 </div>
@@ -230,7 +230,7 @@
                                 &#9734; 是 Unicode 編碼，對應於空心星星（☆）。 -->
                         <span>&#9733;&#9733;&#9733;&#9733;&#9734;</span>
                     </div>
-                    <img src="./img/deeliver-mUnrb7-xCtk-unsplash.jpg" alt="Review Image" class="review-image">
+                    <img src="./img/lp.jpg" alt="Review Image" class="review-image">
                     <p class="review-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, vel!</p>
                     <a href="shop_detail.html" class="read-more">Read more</a>
                 </div>
@@ -250,7 +250,7 @@
                     <div class="rating">
                         <span>&#9733;&#9733;&#9733;&#9733;&#9734;</span>
                     </div>
-                    <img src="img/deeliver-mUnrb7-xCtk-unsplash.jpg" alt="Review Image" class="review-image">
+                    <img src="./img/lp.jpg" alt="Review Image" class="review-image">
                     <p class="review-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, vel!</p>
                     <a href="shop_detail.html" class="read-more">Read more</a>
                 </div>
