--- a/index.html
+++ b/index.html
@@ -318,12 +318,12 @@
         </a>
         <p>@cupertino.keki</p>
         <div class="instagram-grid">
-            <img src="./img/elena-leya-Gk2a6AnlAaU-unsplash.jpg" alt="Instagram Photo">
+            <img src="./img/lp.jpg" alt="Instagram Photo">
             <img src="./img/mae-mu-74HGrqRby2Q-unsplash.jpg" alt="Instagram Photo">
             <img src="./img/slide3.jpg" alt="Instagram Photo">
             <img src="./img/rens-d-6LTAljmu2cY-unsplash.jpg" alt="Instagram Photo">
             <img src="./img/profile2.jpg" alt="Instagram Photo">
-            <img src="./img/jakub-cihak-0dGOKTwnx78-unsplash.jpg" alt="Instagram Photo">
+            <img src="./img/lp.jpg" alt="Instagram Photo">
         </div>
         
     </div>
