--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <section class="split-section">
         <div class="left-side">
-            <p class="overlay-text">Treat Yourself to Sweet Perfection.</p>
+            <p class="overlay-text">Let’s Make Life Sweet, One Dessert at a Time.</p>
             <div class="search-bar">
                 <input type="text" placeholder="Search Dessert Shops">
                 <input type="text" placeholder="Songshan, Taipei">
@@ -297,7 +297,7 @@
             </a>
         </div>
         <div class="category-card">
-            <a href="v2/category.html">
+            <a href="category.html">
                 <img src="./img/c7.svg" alt="Cinnamon Rolls">
             </a>
         </div>
