--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <!-- 左半邊導航選單 -->
             <nav class="nav-menu">
                 <ul>
-                    <li><a href="index.html">cinnamon Rolls</a></li>
+                    <li><a href="index.html">cinnamon rolls</a></li>
                     <li><a href="index.html">cheese cakes</a></li>
                     <li><a href="index.html">ice creams</a></li>
                     <li><a href="index.html">cafes</a></li>
