--- a/index.html
+++ b/index.html
@@ -9,14 +9,22 @@
 
      <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/swiper-bundle.css">
-    <link rel="stylesheet" href="CSS/test.css">
+    <link rel="stylesheet" href="CSS/swiper2.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <script src="Js/button_up.js" defer></script>
     <!-- <script src="Js/slider.js" defer></script> -->
     <script src="Js/hamburger.js" defer></script>
+     <!-- <script src="Js/hamburger2.js"></script> -->
     <script src="Js/swiper-bundle.js"></script>
+    <link rel="stylesheet" href="CSS/hamburger.css">
 </head>
 <body>
+    
+    <input id="menu" type="checkbox">
+    <label for="menu"></label>
+
+
+
     <header class="header">
         <div class="header-container">
             <nav class="nav-menu">
@@ -27,7 +35,7 @@
                         <li><a href="index.html">cafes</a></li>
                         <li><a href="review.html">write a review</a></li>
                         <li>
-                            <a href="https://www.instagram.com/cupertino.keki/" class="brand-name">
+                            <a href="https://www.instagram.com/cupertino.keki/" class="brand-name"target="_blank">
                                 cupertino.keki
                                 <i class="fa-solid fa-arrow-up-right-from-square link-icon"></i>
                             </a>
@@ -41,7 +49,11 @@
                 </a>
             </div>
 
-            <div class="menu-toggle" id="mobile-menu">
+<!---------------------------- hamburger ----------------------------- -->
+ <!-- 漢堡按鈕 -->
+ <!-- <div id="mobile-menu" class="hamburger-menu">☰</div> -->
+<!-- old class = menu-toggle -->
+            <div id="mobile-menu" class="menu-toggle" >
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -51,7 +63,7 @@
                 <a href="login.html" class="btn-login">Log In</a>
                 <a href="signup.html" class="btn-signup">Sign Up</a>
                 <button class="login_avatar" onclick="location.href='login.html';">
-                    <i class="fa-regular fa-user"></i>
+                    <i class="fa-solid fa-circle-user"></i>
                 </button>
 
             </div>
@@ -139,7 +151,7 @@
                         <span>&#9733;&#9733;&#9733;&#9733;&#9734;</span>
                     </div>
                     <img src="./img/lp.jpg" alt="Review Image" class="review-image">
-                    <p class="review-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, vel!</p>
+                    <p class="review-text">The desserts were heavenly! Perfectly balanced sweetness, stunning and rich flavors. </p>
                     <a href="shop_detail.html" class="read-more">Read more</a>
                 </div>
             </div>
@@ -159,7 +171,7 @@
                         <span>&#9733;&#9733;&#9733;&#9733;&#9734;</span>
                     </div>
                     <img src="./img/lp.jpg" alt="Review Image" class="review-image">
-                    <p class="review-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, vel!</p>
+                    <p class="review-text">The desserts were heavenly! Perfectly balanced sweetness, stunning and rich flavors.</p>
                     <a href="shop_detail.html" class="read-more">Read more</a>
                 </div>
             </div>
@@ -179,7 +191,7 @@
                         <span>&#9733;&#9733;&#9733;&#9733;&#9734;</span>
                     </div>
                     <img src="./img/lp.jpg" alt="Review Image" class="review-image">
-                    <p class="review-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, vel!</p>
+                    <p class="review-text">The desserts were heavenly! Perfectly balanced sweetness, stunning and rich flavors.</p>
                     <a href="shop_detail.html" class="read-more">Read more</a>
                 </div>
             </div>
@@ -199,7 +211,7 @@
                         <span>&#9733;&#9733;&#9733;&#9733;&#9734;</span>
                     </div>
                     <img src="./img/lp.jpg" alt="Review Image" class="review-image">
-                    <p class="review-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, vel!</p>
+                    <p class="review-text">The desserts were heavenly! Perfectly balanced sweetness, stunning and rich flavors.</p>
                     <a href="shop_detail.html" class="read-more">Read more</a>
                 </div>
             </div>
@@ -219,7 +231,7 @@
                         <span>&#9733;&#9733;&#9733;&#9733;&#9734;</span>
                     </div>
                     <img src="./img/lp.jpg" alt="Review Image" class="review-image">
-                    <p class="review-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, vel!</p>
+                    <p class="review-text">The desserts were heavenly! Perfectly balanced sweetness, stunning and rich flavors.</p>
                     <a href="shop_detail.html" class="read-more">Read more</a>
                 </div>
             </div>
@@ -239,7 +251,7 @@
                         <span>&#9733;&#9733;&#9733;&#9733;&#9734;</span>
                     </div>
                     <img src="./img/lp.jpg" alt="Review Image" class="review-image">
-                    <p class="review-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, vel!</p>
+                    <p class="review-text">The desserts were heavenly! Perfectly balanced sweetness, stunning and rich flavors.</p>
                     <a href="shop_detail.html" class="read-more">Read more</a>
                 </div>
             </div>
@@ -263,7 +275,7 @@
                         <span>&#9733;&#9733;&#9733;&#9733;&#9734;</span>
                     </div>
                     <img src="./img/lp.jpg" alt="Review Image" class="review-image">
-                    <p class="review-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, vel!</p>
+                    <p class="review-text">The desserts were heavenly! Perfectly balanced sweetness, stunning and rich flavors.</p>
                     <a href="shop_detail.html" class="read-more">Read more</a>
                 </div>
             </div>
@@ -283,7 +295,7 @@
                         <span>&#9733;&#9733;&#9733;&#9733;&#9734;</span>
                     </div>
                     <img src="./img/lp.jpg" alt="Review Image" class="review-image">
-                    <p class="review-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, vel!</p>
+                    <p class="review-text">The desserts were heavenly! Perfectly balanced sweetness, stunning and rich flavors.</p>
                     <a href="shop_detail.html" class="read-more">Read more</a>
                 </div>
             </div>
