--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
      <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/swiper-bundle.css">
     <link rel="stylesheet" href="CSS/swiper2.css">
+    <!-- <link rel="stylesheet" href="CSS/try.css"> -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <script src="Js/button_up.js" defer></script>
     <!-- <script src="Js/slider.js" defer></script> -->
@@ -17,17 +18,25 @@
      <!-- <script src="Js/hamburger2.js"></script> -->
     <script src="Js/swiper-bundle.js"></script>
     <link rel="stylesheet" href="CSS/hamburger.css">
+    <link rel="stylesheet" href="CSS/loader.css">
+    <script src="Js/loader.js"></script>
 </head>
 <body>
-    
-    <input id="menu" type="checkbox">
-    <label for="menu"></label>
 
+    <div class="loader" id="loader">
+        <img src="sugartopia6.gif" alt="Loading" style="width: 300px; height: auto;">
+    </div>
 
 
     <header class="header">
         <div class="header-container">
             <nav class="nav-menu">
+                <div class="search-bar">
+                    <input type="text" placeholder="Search Dessert Shops">
+                    <button class="search-btn">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </div>
                 <ul>
                         <li><a href="index.html">cinnamon rolls</a></li>
                         <li><a href="index.html">cheese cakes</a></li>
@@ -451,7 +460,7 @@
       },
     });
   </script>
-
+<!-- </div> -->
 </body>
 </html>
 
