loader bg update

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
     <div class="loader" id="loader">
-        <img src="sugartopia6.gif" alt="Loading" style="width: 300px; height: auto;">
+        <img src="sugartopia8.gif" alt="Loading" style="width: 250px; height: auto;">
     </div>
 
 
@@ -42,7 +42,7 @@
                         <li><a href="index.html">cheese cakes</a></li>
                         <li><a href="index.html">ice creams</a></li>
                         <li><a href="index.html">cafes</a></li>
-                        <li><a href="review.html">write a review</a></li>
+                        <li><a href="index.html">write a review</a></li>
                         <li>
                             <a href="https://www.instagram.com/cupertino.keki/" class="brand-name"target="_blank">
                                 cupertino.keki
