category/shop detail pages update

--- a/shop_detail.html
+++ b/shop_detail.html
@@ -30,8 +30,8 @@
 
             <!-- 右側按鈕 -->
             <div class="actions">
-                <a href="#" class="btn-login">Log in</a>
-                <a href="#" class="btn-signup">Sign up</a>
+                <a href="login.html" class="btn-login">Log in</a>
+                <a href="signup.html" class="btn-signup">Sign up</a>
             </div>
         </div>
     </header>
@@ -66,7 +66,7 @@
                 </div>
             </div>
             <div class="shop-image">
-                <img src="https://picsum.photos/400/300?random=1" alt="Random Dessert">
+                <img src="img/lp.jpg" alt="Random Dessert">
             </div>
         </div>
 
@@ -96,7 +96,8 @@
             <h3>Popular desserts</h3>
             <div class="menu-grid">
                 <div class="menu-item">
-                    <img src="https://picsum.photos/300/200?random=1" alt="Apple Walnut Cinnamon Rolls">
+                    <img src="img/nathan-dumlao-pJllO6r0pKo-unsplash.jpg" alt="Apple Walnut Cinnamon Rolls">
+                    <!-- <img src="https://picsum.photos/300/200?random=1" alt="Apple Walnut Cinnamon Rolls"> -->
                     <div class="item-info">
                         <h4>Apple Walnut Cinnamon Rolls</h4>
                         <div class="photo-stats">
@@ -106,7 +107,7 @@
                     </div>
                 </div>
                 <div class="menu-item">
-                    <img src="https://picsum.photos/300/200?random=2" alt="Classic Cinnamon Rolls">
+                    <img src="img/natalia-gusakova-isjsR5XB3pA-unsplash.jpg" alt="Classic Cinnamon Rolls">
                     <div class="item-info">
                         <h4>Classic Cinnamon Rolls</h4>
                         <div class="photo-stats">
@@ -116,7 +117,7 @@
                     </div>
                 </div>
                 <div class="menu-item">
-                    <img src="https://picsum.photos/300/200?random=3" alt="Chocolate Cinnamon Rolls">
+                    <img src="img/natasha-levai-YVsFV0E-CGo-unsplash.jpg" alt="Chocolate Cinnamon Rolls">
                     <div class="item-info">
                         <h4>Chocolate Cinnamon Rolls</h4>
                         <div class="photo-stats">
@@ -133,7 +134,7 @@
             <h2>What's the vibe?</h2>
             <div class="vibe-grid">
                 <div class="vibe-item">
-                    <img src="https://picsum.photos/300/200?random=5" alt="Inside">
+                    <img src="img/rens-d-6LTAljmu2cY-unsplash.jpg" alt="Inside">
                     <div class="item-info">
                         <h4>Inside</h4>
                         <div class="photo-stats">
@@ -143,7 +144,7 @@
                     </div>
                 </div>
                 <div class="vibe-item">
-                    <img src="https://picsum.photos/300/200?random=6" alt="Outside">
+                    <img src="img/natalia-gusakova-isjsR5XB3pA-unsplash.jpg" alt="Outside">
                     <div class="item-info">
                         <h4>Outside</h4>
                         <div class="photo-stats">
@@ -153,7 +154,7 @@
                     </div>
                 </div>
                 <div class="vibe-item">
-                    <img src="https://picsum.photos/300/200?random=7" alt="Food">
+                    <img src="img/mae-mu-74HGrqRby2Q-unsplash.jpg" alt="Food">
                     <div class="item-info">
                         <h4>Food</h4>
                         <div class="photo-stats">
@@ -185,7 +186,7 @@
                 <!-- 評論 1 -->
                 <div class="review-item">
                     <div class="reviewer-info">
-                        <img src="https://picsum.photos/50/50?random=8" alt="Emily C.">
+                        <img src="img/profile.jpg" alt="Emily C.">
                         <div class="reviewer-details">
                             <h4>Emily C.</h4>
                             <p>Songshan, Taipei</p>
@@ -202,9 +203,9 @@
                         </div>
                         <p class="review-text">The cinnamon rolls here are absolutely amazing! The apple walnut variation is my favorite. The texture is perfect and the flavors are well balanced.</p>
                         <div class="review-photos">
-                            <img src="https://picsum.photos/200/200?random=9" alt="Review photo 1">
-                            <img src="https://picsum.photos/200/200?random=10" alt="Review photo 2">
-                            <img src="https://picsum.photos/200/200?random=11" alt="Review photo 3">
+                            <img src="img/nathan-dumlao-pJllO6r0pKo-unsplash.jpg" alt="Review photo 1">
+                            <img src="img/theo-crazzolara-BpcTCHoruSo-unsplash.jpg" alt="Review photo 2">
+                            <img src="img/yana-gorbunova-usM1_4RAiVE-unsplash.jpg" alt="Review photo 3">
                         </div>
                         <div class="review-actions">
                             <button class="helpful">
@@ -230,7 +231,7 @@
                 <!-- 評論 2 -->
                 <div class="review-item">
                     <div class="reviewer-info">
-                        <img src="https://picsum.photos/50/50?random=15" alt="Sarah L.">
+                        <img src="img/profile2.jpg" alt="Sarah L.">
                         <div class="reviewer-details">
                             <h4>Sarah L.</h4>
                             <p>Da'an, Taipei</p>
@@ -247,8 +248,8 @@
                         </div>
                         <p class="review-text">每次經過都會忍不住買上一盒！肉桂捲的香氣實在太誘人了。店員們都很親切，環境也很舒適。最喜歡他們的蘋果核桃口味，甜度剛好，核桃的香脆更是畫龍點睛。</p>
                         <div class="review-photos">
-                            <img src="https://picsum.photos/200/200?random=16" alt="Review photo 1">
-                            <img src="https://picsum.photos/200/200?random=17" alt="Review photo 2">
+                            <img src="img/rens-d-6LTAljmu2cY-unsplash.jpg" alt="Review photo 1">
+                            <img src="img/yana-gorbunova-usM1_4RAiVE-unsplash.jpg" alt="Review photo 2">
                         </div>
                         <div class="review-actions">
                             <button class="helpful">
@@ -274,7 +275,7 @@
                 <!-- 評論 3 -->
                 <div class="review-item">
                     <div class="reviewer-info">
-                        <img src="https://picsum.photos/50/50?random=18" alt="Mike W.">
+                        <img src="img/profile3.jpg" alt="Mike W.">
                         <div class="reviewer-details">
                             <h4>Mike W.</h4>
                             <p>Zhongshan, Taipei</p>
@@ -291,9 +292,9 @@
                         </div>
                         <p class="review-text">這家店的肉桂捲絕對是台北最好吃的！每一口都充滿香料的香氣，麵團的口感鬆軟適中。咖啡也很棒，特別推薦配上他們的招牌拿鐵。假日來要趁早，不然很容易賣完喔！</p>
                         <div class="review-photos">
-                            <img src="https://picsum.photos/200/200?random=19" alt="Review photo 1">
-                            <img src="https://picsum.photos/200/200?random=20" alt="Review photo 2">
-                            <img src="https://picsum.photos/200/200?random=21" alt="Review photo 3">
+                            <img src="img/nathan-dumlao-pJllO6r0pKo-unsplash.jpg" alt="Review photo 1">
+                            <img src="img/natasha-levai-YVsFV0E-CGo-unsplash.jpg" alt="Review photo 2">
+                            <img src="img/lp.jpg" alt="Review photo 3">
                         </div>
                         <div class="review-actions">
                             <button class="helpful">
@@ -319,7 +320,7 @@
                 <!-- 評論 4 -->
                 <div class="review-item">
                     <div class="reviewer-info">
-                        <img src="https://picsum.photos/50/50?random=20" alt="John D.">
+                        <img src="img/profile.jpg" alt="John D.">
                         <div class="reviewer-details">
                             <h4>John D.</h4>
                             <p>Xinyi, Taipei</p>
@@ -336,8 +337,8 @@
                         </div>
                         <p class="review-text">每次經過都會忍不住買上一盒！肉桂捲的香氣實在太誘人了。店員們都很親切，環境也很舒適。最喜歡他們的蘋果核桃口味，甜度剛好，核桃的香脆更是畫龍點睛。</p>
                         <div class="review-photos">
-                            <img src="https://picsum.photos/200/200?random=22" alt="Review photo 1">
-                            <img src="https://picsum.photos/200/200?random=23" alt="Review photo 2">
+                            <img src="img/natasha-levai-YVsFV0E-CGo-unsplash.jpg" alt="Review photo 1">
+                            <img src="img/nathan-dumlao-pJllO6r0pKo-unsplash.jpg" alt="Review photo 2">
                         </div>
                         <div class="review-actions">
                             <button class="helpful">
@@ -359,8 +360,6 @@
                         </div>
                     </div>
                 </div>
-
-                <!-- 評論 5-8 結構相同，只需更換照片、名字和內容 -->
             </div>
 
             <!-- 分頁導航 -->
@@ -376,5 +375,51 @@
             </div>
         </section>
     </section>
+
+    <!-- footer ------------------------------------------------------>
+<footer>
+    <div class="footer-content">
+        <p>Sugar.Topia @ 2024. All rights reserved.</p>
+        <div class="footer-links">
+            <a href="#">About</a>
+            <a href="#">Service</a>
+            <a href="#">Business</a>
+        </div>
+        <div class="footer_social-icons">
+            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com/cupertino.keki/"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+    </div>
+</footer>
+
+<!-- Initialize Swiper -->
+<script>
+    var swiper = new Swiper(".mySwiper", {
+      spaceBetween: 30,
+      centeredSlides: true,
+      autoplay: {
+        delay: 2500,
+        disableOnInteraction: false,
+      },
+      pagination: {
+        el: ".swiper-pagination",
+        clickable: true,
+      },
+      navigation: {
+        nextEl: ".swiper-button-next",
+        prevEl: ".swiper-button-prev",
+      },
+    });
+  </script>
+<!-- </div> -->
+</body>
+</html>
+
+
+
+
 </body>
 </html> 
