--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <li><a href="index.html">cheese cakes</a></li>
                         <li><a href="index.html">ice creams</a></li>
                         <li><a href="index.html">cafes</a></li>
-                        <li><a href="index.html">write a review</a></li>
+                        <li><a href="write_review.html">write a review</a></li>
                         <li>
                             <a href="https://www.instagram.com/cupertino.keki/" class="brand-name"target="_blank">
                                 cupertino.keki
@@ -90,9 +90,9 @@
                 </button>
             </div>
             <div class="social-icons">
-                <a href="https://www.instagram.com/cupertino.keki/"><i class="fab fa-instagram"></i></a>
-                <a href=""><i class="fab fa-youtube"></i></a>
-                <a href="review.html"><i class="fa-regular fa-star"></i></a>
+                <a href="https://www.instagram.com/cupertino.keki/"target="_blank"><i class="fab fa-instagram" ></i></a>
+                <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
+                <a href="write_review.html"><i class="fa-regular fa-star"></i></a>
                 <a href="aboutus.html"><img src='./img/icon.svg' alt="Sugar.Topia Logo"></a>
             </div>
         </div>
