--- a/review.html
+++ b/review.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sugar.Topia</title>
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/write_review.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <script src="../v2/Js/button_up.js" defer></script>
-    <script src="Js/slider.js" defer></script>
+    <!-- <script src="Js/slider.js" defer></script> -->
 </head>
 <body>
     <header class="header">
