--- a/write_review.html
+++ b/write_review.html
@@ -20,14 +20,21 @@
                 </ul>
             </nav>
         </div>
+
+        <div class="logo-container">
+            <a href="index.html">
+                <img src="./img/1207.svg" alt="Sugar.Topia">
+            </a>
+        </div>
     </header>
+
 
     <main>
         <section class="review-section">
             <h1>Write a Review</h1>
             <form class="review-form">
                 <div class="form-group">
-                    <label for="dessert-name">Dessert Name:</label>
+                    <label for="dessert-name">Dessert Shop:</label>
                     <input type="text" id="dessert-name" name="dessert-name" required>
                 </div>
                 <div class="form-group">
@@ -58,10 +65,24 @@
         </section>
     </main>
 
-    <footer>
-        <div class="footer-content">
-            <p>Sugar.Topia @ 2024. All rights reserved.</p>
+
+<!-- footer ------------------------------------------------------>
+<footer>
+    <div class="footer-content">
+        <p>Sugar.Topia @ 2024. All rights reserved.</p>
+        <div class="footer-links">
+            <a href="#">About</a>
+            <a href="#">Service</a>
+            <a href="#">Business</a>
         </div>
-    </footer>
+        <div class="footer_social-icons">
+            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com/cupertino.keki/"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
